# machado-finanace-api

./: .env.example  .gitignore  AGENTS.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
app/: main.py
app/THINK/: account.json
app/core/: settings.py
app/core/cache/: manager.py  redis.py  service.py
app/core/database/: __init__.py  base.py
app/core/exceptions/: __init__.py  exceptions.py
app/core/logging/: __init__.py  logging.py  middleware.py  schemas.py
app/core/pagination/: __init__.py  pagination.py  schemas.py
app/core/repository/: __init__.py  base.py
app/core/security/: __init__.py  security.py
app/core/service/: __init__.py  base.py
app/domain/auth/: repository.py  route.py  schema.py  service.py
app/domain/finance/: business.py  finance.json  repository.py  route.py  schema.py  service.py
app/models/: __init__.py  account.py  allocation.py  allocation_contribution.py  category.py  enums.py  expense.py  expense_month.py  finance.py  income.py  income_month.py  transaction.py  transfer.py  user.py
app/shared/: schemas.py
migrations/: env.py
migrations/versions/: 19e2a3876803_allocation_contribuitions_flow.py  2eaf2a39f864_finance_onboarding.py  3de20d5a4844_income_flow.py  5b492291b320_expense_and_transfer_flow.py  67ded50d6992_transaction_flow.py  74e1cc2cb09b_expense_months.py  86e5c676f9d7_category_flow.py  99853d86cfdc_account_flow.py  a1b2c3d4e5f6_users.py  ace0c0cd043c_allocation_flow.py  d31fe2b20921_income_months.py
tests/: conftest.py
tests/app/: test_main.py
(+100 files in other folders)
