[project]
name = "machado-finance-api"
version = "0.1.0"
description = ""
authors = [
    { name = "Jorge Machado", email = "jorge.vmachado@gmail.com" }
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard] (>=0.136.0,<0.137.0)",
    "sqlalchemy[asyncio] (>=2.0.49,<3.0.0)",
    "pydantic-settings (>=2.13.1,<3.0.0)",
    "pwdlib[argon2] (>=0.3.0,<0.4.0)",
    "aiosqlite (>=0.22.1,<0.23.0)",
    "tzdata (>=2026.1,<2027.0)",
    "psycopg[binary] (>=3.3.3,<4.0.0)",
    "pyjwt (>=2.12.1,<3.0.0)",
    "alembic (>=1.18.4,<2.0.0)",
    "fastapi-pagination (>=0.15.12,<0.16.0)",
    "redis (>=7.4.0,<8.0.0)",
    "pydantic (>=2.13.2,<3.0.0)",
    "httpx (>=0.28.1,<0.29.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
# Disable package mode so Poetry installs only dependencies (avoids "No file/folder found for package" error)
package-mode = false

[dependency-groups]
dev = [
    "ruff (>=0.15.11,<0.16.0)",
    "pytest (>=9.0.3,<10.0.0)",
    "pytest-cov (>=7.1.0,<8.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)",
    "factory-boy (>=3.3.3,<4.0.0)",
    "freezegun (>=1.5.5,<2.0.0)",
    "testcontainers (>=4.14.2,<5.0.0)"
]
